force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/DG_DFR_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>DG DFR Field Mapping</label>
    <pluralLabel>DG DFR Field Mappings</pluralLabel>
</CustomObject>