force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/fields/DFR_field__c.field-meta.xml
<CustomField>
    <fullName>DFR_field__c</fullName>
    <label>DFR field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>