force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/fields/DFRVersion__c.field-meta.xml
<CustomField>
    <fullName>DFRVersion__c</fullName>
    <inlineHelpText>Is this for the original version of the DFR or the new one?</inlineHelpText>
    <label>DFR Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Version 1</fullName>
                <default>true</default>
                <label>Version 1</label>
            </value>
            <value>
                <fullName>Version 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>