force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/fields/Original_field__c.field-meta.xml
<CustomField>
    <fullName>Original_field__c</fullName>
    <label>Original field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>