force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>