force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DFR_field__c</columns>
    <columns>DFR_Lookup__c</columns>
    <columns>Object__c</columns>
    <columns>Original_field__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>