force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/listViews/No_Version.listView-meta.xml
<ListView>
    <fullName>No_Version</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DFR_field__c</columns>
    <columns>Object__c</columns>
    <columns>Original_field__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DFRVersion__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Version</label>
</ListView>