force-app/main/default/objects/DG_DFR_Field_Mapping__mdt/listViews/Version_2.listView-meta.xml
<ListView>
    <fullName>Version_2</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DFR_field__c</columns>
    <columns>Object__c</columns>
    <columns>Original_field__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DFRVersion__c</field>
        <operation>equals</operation>
        <value>Version 2</value>
    </filters>
    <label>Version 2</label>
</ListView>